# novel

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  start.py
bible/: power_system.md  style_guide.md
bible/characters/: 主角模板.md  赵天铭.md  韩立.md
bible/worldview/: 修仙界地理.md  门派势力.md
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentCard.tsx  BackgroundFX.tsx  BookOverview.tsx  CostPanel.tsx  FeedbackPanel.tsx  ForeshadowingLedger.tsx  HeroPanel.tsx  Icons.tsx  InterventionDrawer.tsx  MarketingPanel.tsx  OutlineWizard.tsx  ReferenceManager.tsx  RunArchivePanel.tsx  ScriptManager.tsx  Sparkline.tsx  TracePanel.tsx
frontend/lib/: api.ts  types.ts
plans/: synopsis.md
references/: 修仙经典桥段范文.md  网文节奏技巧.md
src/novel_agents/: __init__.py  main.py
src/novel_agents/agents/: __init__.py  arc_architect.py  marketing_specialist.py  pacing_doctor.py  planner.py  polisher.py  reader_sim.py  reviewer.py  world_builder.py  writer.py
src/novel_agents/book/: __init__.py  ai_taste.py  character_runtime.py  cost.py  feedback.py  foreshadowing.py  highlights.py  kpi.py  paths.py  stats.py  summaries.py  titles.py
src/novel_agents/config/: settings.py
src/novel_agents/core/: llm_gateway.py  memory.py  orchestrator.py
src/novel_agents/server/: __init__.py  app.py  events.py  mock_data.py  models.py  runner.py  storage_sqlite.py
src/novel_agents/tools/: bible_tool.py  chapter_context_tool.py  (+1 more)
tests/: test_basic.py  test_server.py
